--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
       <script src="bower_components/select2/select2.js"></script>
       <script src="bower_components/ui-select/src/select3.js"></script>
       <script src="bower_components/angular-ui-select/dist/select.js"></script>
-      <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
+      <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
       <script src="bower_components/nvd3/build/nv.d3.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
@@ -74,7 +74,6 @@
 
 
         <!-- build:js({.tmp,client}) app/app.js -->
-        <script src="bower_components/waypoints/lib/shortcuts/sticky.js"></script>
         <script src="app/app.js"></script>
 
           <!-- injector:js -->
@@ -85,6 +84,7 @@
           <script src="app/account/signup/signup.js"></script>
           <script src="app/common/common.js"></script>
           <script src="app/common/plugins.js"></script>
+          <script src="app/common/sticky.js"></script>
           <script src="app/controllers/admin/admin.js"></script>
           <script src="app/controllers/attachCertificate/attachCertificate.js"></script>
           <script src="app/controllers/certificate/certificate.js"></script>
