--- a/client/app/controllers/admin/admin.html
+++ b/client/app/controllers/admin/admin.html
@@ -29,6 +29,7 @@
             <div class="col-lg-3 col-sm-3"><strong>Email</strong></div>
             <div class="col-lg-2 col-sm-2"><strong>Role</strong></div>
             <div class="col-lg-2 col-sm-2"><strong>is Admin</strong></div>
+            <div class="col-lg-2 col-sm-2"><strong>Delete</strong></div>
           </div>
           <div class="clearfix"></div>
           <div class="row-fluid tabled-row" ng-repeat="user in users | filter: query| filter:querys.role:true">
@@ -45,6 +46,11 @@
                 <label class='tgl-btn' for='{{user._id}}'></label>
               </div>
               <span class="label label-info" ng-if='isMe._id == user._id'>this is you</span>
+            </div>
+            <div class="col-lg-2 col-sm-2">
+              <span ng-if="user.name != 'Admin' && isMe._id !== user._id">
+                <a href ng-click='delete(user)'><em class="icon icon-remove"></em></a>
+              </span>
             </div>
           </div>
         </div>
