--- a/client/index.html
+++ b/client/index.html
@@ -90,6 +90,7 @@
           <script src="app/controllers/certificate/certificate.js"></script>
           <script src="app/controllers/create/create.js"></script>
           <script src="app/controllers/createCertificate/createCertificate.js"></script>
+          <script src="app/controllers/exports/exports.js"></script>
           <script src="app/controllers/forms/forms.js"></script>
           <script src="app/controllers/formshow/formshow.js"></script>
           <script src="app/controllers/formshow/formshowsuccess.js"></script>
