--- a/client/index.html
+++ b/client/index.html
@@ -71,7 +71,7 @@
       <script src="bower_components/ngquill/src/ng-quill.min.js"></script>
       <script src="bower_components/angular-elastic/elastic.js"></script>
       <!-- endbower -->
-
+    <!-- endbuild -->
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
