--- a/client/app/controllers/admin/admin.html
+++ b/client/app/controllers/admin/admin.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="clearfix"></div>
-      <div class="froms-list">
+      <div class="forms-list">
         <div ng-if="users.length > 0">
           <div class="tabled-row-filter">
             <span class="label label-info" ng-class="{selected: !querys.role}" ng-click="querys.role = undefined">All</span>
