--- a/client/app/controllers/certificate/create_certificate.html
+++ b/client/app/controllers/certificate/create_certificate.html
@@ -1,79 +1,101 @@
-<form class="form" ng-submit="ok()">
-  <div class="modal-header">
-    <h3 class="modal-title"> <em class="icon icon-trophy"></em> Add/Modify new certificate</h3>
-  </div>
-  <div class="modal-body">
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <div class="certificate preview">
-          <h1 class="certificate-heading">Green Laboratory Certification</h1>
-          <div class="certificate-body">
-            <div class="certificate-logo">
-              <img ng-src="{{certificate.logo}}" alt="" ng-if="certificate.logo">
-              <img src="assets/images/certf/default.png" alt="" ng-if="!certificate.logo">
-            </div>
-            <div class="certificate-content">
-              {{certificate.content}}
-              <span ng-if="!certificate.content">
-                The University of Washington Environmental Stewardship and Sustainability Office certifies <span class="certificate-name"> Name </span> as a Green Laboratory.
-              </span>
-            </div>
-          </div>
-          <div class="certificate-footer">
-            <div class="certificate-sign">
-              <img ng-src="{{certificate.sign}}" alt="" ng-if="certificate.sign">
-              <img src="assets/images/certf/default-sign.png" alt="" ng-if="!certificate.sign">
-              <span ng-if="!certificate.designation" class="text-muted">Designation goes here</span>
-              <span ng-if="certificate.designation">
-                {{certificate.designation}}
-              </span>
-            </div>
-            <div class="certificate-date">
-              <span>{{formattedDate()}}</span>
-              <br> Date
-            </div>
-          </div>
-          <div class="certificate-bottom-border"></div>
-          <div class="certificate-caption">Sustainability: It's in our nature</div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6">
-        <div class="form-group">
-          <label for="certificate-name">Certificate Name</label>
-          <input type="text" class="form-control" required ng-model="certificate.name" />
-        </div>
-        <div class="row">
-          <div class="form-group col-lg-6 col-lg-6">
-            <label for="certificate-min">Min</label>
-            <input type="number" class="form-control" required ng-model="certificate.min" />
-          </div>
-          <div class="form-group col-lg-6 col-lg-6">
-            <label for="certificate-max">Max</label>
-            <input type="number" class="form-control" required ng-model="certificate.max" />
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-10 col-sm-10 main-content-wrap">
+    <div class="main-content">
+      <!--       <div class="row-fluid">
+        <div class="col-lg-7 col-sm-7 oh">
+          <div class="iconed-input">
+            <input type="text" class="form-control" ng-model="query.name" placeholder="Search for users">
+            <em class="icon icon-search"></em>
           </div>
         </div>
-        <div class="form-group">
-          <label for="certificate-content">Content</label>
-          <textarea type="text" class="form-control vert" required ng-model="certificate.content" style="min-height: 100px;" placeholder="Content goes here, e.g.. The University of Washington Environmental Stewardship and Sustainability Office certifies {name} as a Green Laboratory."></textarea>
-        </div>
-        <div class="form-group">
-          <label for="certificate-logo">Logo URL</label>
-          <input type="text" class="form-control" required ng-model="certificate.logo" />
-        </div>
-        <div class="form-group">
-          <label for="certificate-sign">Signature URL</label>
-          <input type="text" class="form-control" required ng-model="certificate.sign" />
-        </div>
-        <div class="form-group">
-          <label for="certificate-designation">Designation of the signer</label>
-          <textarea type="text" class="form-control vert" required ng-model="certificate.designation" style="min-height: 50px;" placeholder="Associate Vice President: Ruth Johnston University of Washington Finance and Facilities"></textarea>
+      </div> -->
+      <div class="clearfix"></div>
+      <div class="row-fluid">
+        <div class="certificate-edit">
+          <form class="form" ng-submit="updateCertificate()">
+            <div class="row">
+              <div class="col-lg-6 col-md-6" style="padding-right: 40px;">
+                <h1 class="main-page-title">{{certificate.name || 'New certificate'}} – <small><a href="/certificates"> Back </a></small></h1>
+                <br>
+                <div class="form-group">
+                  <label for="certificate-name">Certificate Name</label>
+                  <input type="text" class="form-control" required ng-model="certificate.name" />
+                </div>
+                <div class="row">
+                  <div class="form-group col-lg-6 col-lg-6">
+                    <label for="certificate-min">Min percentage score</label>
+                    <input type="number" class="form-control" required ng-model="certificate.min" />
+                  </div>
+                  <div class="form-group col-lg-6 col-lg-6">
+                    <label for="certificate-max">Max percentage score</label>
+                    <input type="number" class="form-control" required ng-model="certificate.max" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="certificate-content">Content</label>
+                  <textarea type="text" class="form-control vert" required ng-model="certificate.content" style="min-height: 100px;" placeholder="Content goes here, e.g.. The University of Washington Environmental Stewardship and Sustainability Office certifies {name} as a Green Laboratory."></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="certificate-logo">Logo image URL</label>
+                  <input type="text" class="form-control" required ng-model="certificate.logo" />
+                </div>
+                <div class="form-group">
+                  <label for="certificate-sign">Signature image URL</label>
+                  <input type="text" class="form-control" required ng-model="certificate.sign" />
+                </div>
+                <div class="form-group">
+                  <label for="certificate-designation">Designation of the signer</label>
+                  <textarea type="text" class="form-control vert" required ng-model="certificate.designation" style="min-height: 50px;" placeholder="Associate Vice President: Ruth Johnston University of Washington Finance and Facilities"></textarea>
+                </div>
+                <div class="pull-right">
+                  <br>
+                  <last-save button-enabled="enableSaveButton" updated="updated"></last-save>
+                  <a class="btn btn-link"  href="/certificates">Cancel</a> &nbsp;&nbsp;&nbsp;
+                  <button class="btn btn-primary" ladda="certificateSaving" data-style="expand-left" ng-disabled="enableSaveButton" type="submit" ng-if="certificate._id != undefined">Update</button>
+                  <button class="btn btn-primary" type="submit" ng-if="certificate._id == undefined">Save &amp; Add</button>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <div class="live-preview">
+                  <h4>Live preview</h4>
+                  <div class="certificate preview">
+                    <h1 class="certificate-heading">Green Laboratory Certification</h1>
+                    <div class="certificate-body">
+                      <div class="certificate-logo">
+                        <img ng-src="{{certificate.logo}}" alt="" ng-if="certificate.logo">
+                        <img src="assets/images/certf/default.png" alt="" ng-if="!certificate.logo">
+                      </div>
+                      <div class="certificate-content">
+                        {{certificate.content}}
+                        <span ng-if="!certificate.content">
+                  The University of Washington Environmental Stewardship and Sustainability Office certifies <span class="certificate-name"> Name </span> as a Green Laboratory.
+                        </span>
+                      </div>
+                    </div>
+                    <div class="certificate-footer">
+                      <div class="certificate-sign">
+                        <img ng-src="{{certificate.sign}}" alt="" ng-if="certificate.sign">
+                        <img src="assets/images/certf/default-sign.png" alt="" ng-if="!certificate.sign">
+                        <span ng-if="!certificate.designation" class="text-muted">Designation goes here</span>
+                        <span ng-if="certificate.designation">
+                  {{certificate.designation}}
+                </span>
+                      </div>
+                      <div class="certificate-date">
+                        <span>{{formattedDate()}}</span>
+                        <br> Date
+                      </div>
+                    </div>
+                    <div class="certificate-bottom-border"></div>
+                    <div class="certificate-caption">Sustainability: It's in our nature</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
-  <div class="modal-footer">
-    <a class="btn btn-link" ng-click="cancel()">Cancel</a> &nbsp;&nbsp;&nbsp;
-    <button class="btn btn-primary" type="submit" ng-if="certificate._id != undefined">Update</button>
-    <button class="btn btn-primary" type="submit" ng-if="certificate._id == undefined">Save &amp; Add</button>
-  </div>
-</form>
+</div>
