--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -8,7 +8,7 @@
       <br>
       <div class="text-center">
         <img src="assets/images/certificate-empty.svg" alt="" class="img-responsive" style="margin: 10px auto; max-width: 900px;">
-        <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
+        <a class="btn btn-primary btn-sm" href="certificates/new"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</a>
       </div>
     </div>
     <div class="main-content" ng-if="certificates.length > 0">
@@ -30,7 +30,7 @@
           </div>
           <div class="col-lg-3">
             <form class="form" ng-if="isAdmin()">
-              <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
+              <a class="btn btn-primary btn-sm" href="certificates/new"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</a>
             </form>
           </div>
         </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="clearfix"></div>
         <div class="row-fluid tabled-row" ng-repeat="certificate in certificates" >
-          <div class="col-lg-3 col-md-3 col-sm-3"> <a href="" ng-click="editCertificate(certificate)">{{certificate.name}}</a></div>
+          <div class="col-lg-3 col-md-3 col-sm-3"> <a href="certificates/{{certificate._id}}">{{certificate.name}}</a></div>
           <div class="col-lg-2 col-md-2 col-sm-2"> {{ certificate.status }}</div>
           <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.min || 0 }}</div>
           <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.max || 0 }}</div>
