--- a/client/app/controllers/forms/form-admin.html
+++ b/client/app/controllers/forms/form-admin.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="clearfix"></div>
-      <div class="froms-list">
+      <div class="forms-list">
         <div ng-if="forms.length > 0">
           <div class="tabled-row-filter">
             <span class="label label-info" ng-class="{selected: !querys.status}" ng-click="querys.status = undefined">All</span>
