--- a/client/app/controllers/forms/form-normal.html
+++ b/client/app/controllers/forms/form-normal.html
@@ -65,7 +65,7 @@
               <small><span class="text-muted">{{getFormatedDate(submission.updated)}}</span></small>
               <span ng-if="submission.expires">
                 <br>
-                <strong class="text-muted">Expires at</strong><br>
+                <strong class="text-muted">Expires on</strong><br>
                 {{getFormatedDate(submission.expires)}}
               </span>
             </div>
