--- a/client/app/controllers/formshow/success.html
+++ b/client/app/controllers/formshow/success.html
@@ -39,7 +39,7 @@
             <div class="clearfix"></div>
             <!-- Certificate -->
             <div class="certificate" id="certificate">
-              <h1 class="certificate-heading">Green Laboratory Certification</h1>
+              <h1 class="certificate-heading">Green Certification</h1>
               <div class="certificate-body">
                 <div class="certificate-logo">
                   <img ng-src="{{certificate.logo}}" alt="">
