Adding the response

--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -42,7 +42,7 @@
                 <div class="scoreboard-square">
                   <span class="aquired_point">{{aquiredPoints}}</span>
                   <span class="divider"></span>
-                  <span class="possible_point">/ {{possiblePoints}}</span>
+                  <span class="possible_point">/ {{results.total_points}}</span>
                 </div>
                 <div class="clearfix"></div>
                 <br>
