Fixing the graph

--- a/client/app/controllers/formshow/no-certificate.html
+++ b/client/app/controllers/formshow/no-certificate.html
@@ -6,7 +6,7 @@
     <div class="row-fluid">
       <div class="col-lg-8 col-sm-8">
         <div class="graph">
-          <h3 class="graph-heading"> Your performance..</h3>
+          <h3 class="graph-heading"> Your performance</h3>
           <div id="chart" style="height: 300px; margin: 10px 0; ">
             <svg></svg>
           </div>
