--- a/client/app/controllers/formshow/yes-certificate.html
+++ b/client/app/controllers/formshow/yes-certificate.html
@@ -1,12 +1,12 @@
 <div class="form-show-container">
-  <h2 class="success-heading text-center">Congraturlations </h2>
+  <h2 class="success-heading text-center">Congratulations </h2>
   <h4 class="sucess-sub-heading text-center"> You are now certified as a {{certificate.name}} level green lab.</h4>
   <!-- From analytics -->
   <div class="stats">
     <div class="row-fluid">
       <div class="col-lg-8 col-sm-8">
         <div class="graph">
-          <h3 class="graph-heading"> Your performance..</h3>
+          <h3 class="graph-heading"> Your performance</h3>
           <div id="chart" style="height: 300px; margin: 10px 0; ">
             <svg></svg>
           </div>
@@ -20,9 +20,9 @@
         </div>
         <div class="clearfix"></div>
         <div class="certf">
-          <span class="text-muted">You are now..</span>
+          <span class="text-muted">You are awarded with a </span>
           <h1 class="certf-text"> {{certificate.name}} </h1>
-          <small class="text-muted">certified green lab</small>
+          <small class="text-muted"> certificate</small>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="certificate-caption">Sustainability: It's in our nature</div>
   </div>
   <!-- Social sharing icons -->
-  <div class="success-sharing">
+  <div class="success-sharing" class="hide">
     <ul class="sucess-sharing-list list-unstyled">
       <li><a href="">Facebook</a>
       </li>
