Adding the back button

--- a/client/app/controllers/formshow/formshow.html
+++ b/client/app/controllers/formshow/formshow.html
@@ -49,7 +49,7 @@
                 <div class="row" ng-if="isAdmin()">
                 <div class="pull-right">
 
-                  <a class="btn  btn-warning" ng-href="{{getFormLink(form)}}" tooltip-append-to-body="true">&larr; Looks good take me back</a>
+                  <a class="btn  btn-warning" href="" ng-click="goBack()" tooltip-append-to-body="true">&larr; Looks good take me back</a>
                   </div>
 
                 </div>
