--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -23,6 +23,8 @@
           <br>
           <div class="main-page-title-info">
             <button ng-click="getExportUrl()" class="btn btn-xs btn-primary">Download as CSV</button>
+            &nbsp; &nbsp; &nbsp; &nbsp;
+            <a ng-href="forms/{{form._id}}/{{results._id}}/success" target="_blank" class="btn btn-xs btn-default">Show certificate</a>
           </div>
         </div>
 
