--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -30,7 +30,7 @@
       <div class="col-lg-10">
         <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
           <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy: 'seq'" data-field="{{field._id}}" ng-class="{choicena: choice.is_na}">
-            <span class="draghandle v-draghandle"></span>
+            <span class="choicedraghandle draghandle v-draghandle"></span>
             <span class="optionIndex">{{$index + 1}}. </span>
             <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus" placeholder="Option">
             <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
@@ -72,9 +72,11 @@
       <div class="col-lg-10">
         <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
           <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}" data-field="{{field._id}}">
-            <span class="draghandle v-draghandle"></span>
+
+            <span class="choicedraghandle draghandle v-draghandle"></span>
             <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
-            <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus" placeholder="Option">
+            {{choice.seq}}
+            <input type="text" values="option1" class="form-control" ng-model="choice.label" placeholder="Option">
             <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
             <div class="multipleOptionsActions">
 
@@ -112,7 +114,7 @@
       <div class="col-lg-10">
         <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
           <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}" data-field="{{field._id}}">
-            <span class="draghandle v-draghandle"></span>
+            <span class="choicedraghandle draghandle v-draghandle"></span>
             <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
             <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus" placeholder="Option">
             <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
