--- a/client/app/controllers/forms/form-admin.html
+++ b/client/app/controllers/forms/form-admin.html
@@ -90,7 +90,7 @@
             <div class="pull-right">
               <a ng-href="{{getFormLink(currentForm)}}" class="btn btn-sm btn-info" ng-if="currentForm.status == 'Unpublished'">Edit form</a> &nbsp;&nbsp;&nbsp;
 
-              <button ng-click="cloneForm(currentForm._id)" class="btn btn-sm btn-default" ng-if="currentForm.status == 'Published'">Clone</button> &nbsp;&nbsp;&nbsp;
+             <!--  <button ng-click="cloneForm(currentForm._id)" class="btn btn-sm btn-default" ng-if="currentForm.status == 'Published'">Clone</button>  -->&nbsp;&nbsp;&nbsp;
 
               <a ng-href="forms/{{currentForm._id}}" class="btn btn-sm btn-default" ng-if="currentForm.status == 'Published'">Preview form</a> &nbsp;&nbsp;&nbsp;
 
