Adding the things required

--- a/client/app/controllers/formshow/no-certificate.html
+++ b/client/app/controllers/formshow/no-certificate.html
@@ -1,5 +1,5 @@
 <div class="form-show-container">
-  <h2 class="success-heading text-center">You can do better </h2>
+  <h2 class="success-heading text-center"> Thank you for taking the certification</h2>
   <h4 class="sucess-sub-heading text-center"> We cannot award any certificate at this time</h4>
   <!-- From analytics -->
   <div class="stats">
