--- a/client/app/controllers/formshow/yes-certificate.html
+++ b/client/app/controllers/formshow/yes-certificate.html
@@ -16,7 +16,7 @@
         <div class="scoreboard">
           <span class="aquired_point">{{aquiredPoints}}</span>
           <span class="divider"></span>
-          <span class="possible_point">{{possiblePoints}}</span>
+          <span class="possible_point">{{form.total_points}}</span>
         </div>
         <div class="clearfix"></div>
         <div class="certf">
