--- a/client/app/controllers/formshow/yes-certificate.html
+++ b/client/app/controllers/formshow/yes-certificate.html
@@ -20,9 +20,9 @@
         </div>
         <div class="clearfix"></div>
         <div class="certf">
-          <span class="text-muted">You are awarded with a </span>
+          <span class="text-muted">You are awarded with a &nbsp;&nbsp;</span>
           <h1 class="certf-text"> {{certificate.name}} </h1>
-          <small class="text-muted"> certificate</small>
+          &nbsp;<small class="text-muted"> certificate</small>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="certificate-caption">Sustainability: It's in our nature</div>
   </div>
   <!-- Social sharing icons -->
-  <div class="success-sharing" class="hide">
+<!--   <div class="success-sharing" class="hide">
     <ul class="sucess-sharing-list list-unstyled">
       <li><a href="">Facebook</a>
       </li>
@@ -69,5 +69,5 @@
       <li><a ng-href="{{'/api/results/'+ results._id +'/certf'}}">Download as pdf</a>
       </li>
     </ul>
-  </div>
+  </div> -->
 </div>
