Adding the minor chages

--- a/client/app/controllers/formshow/yes-certificate.html
+++ b/client/app/controllers/formshow/yes-certificate.html
@@ -1,6 +1,6 @@
 <div class="form-show-container">
   <h2 class="success-heading text-center">Congratulations </h2>
-  <h4 class="sucess-sub-heading text-center"> You are now certified as a {{certificate.name}} level green lab.</h4>
+  <h4 class="sucess-sub-heading text-center"> You are now certified as a {{certificate.name}}.</h4>
   <!-- From analytics -->
   <div class="stats">
     <div class="row-fluid">
@@ -20,7 +20,7 @@
         </div>
         <div class="clearfix"></div>
         <div class="certf">
-          <span class="text-muted">You are awarded with a &nbsp;&nbsp;</span>
+          <span class="text-muted">You have earned:  a &nbsp;&nbsp;</span>
           <h1 class="certf-text"> {{certificate.name}} </h1>
           &nbsp;<small class="text-muted"> certificate</small>
         </div>
