--- a/client/app/controllers/results/responses.html
+++ b/client/app/controllers/results/responses.html
@@ -49,7 +49,7 @@
                 <div class="clearfix"></div>
                 <br>
                 <div class="certf" ng-if="certificate.name">
-                  <span class="text-muted">You are awarded with &nbsp;</span>
+                  <span class="text-muted">You have earned:  &nbsp;</span>
                   <h1 class="certf-text"> {{certificate.name}} &nbsp;</h1>
                   <small class="text-muted"> certificate </small>
                 </div>
